# restore-pixel-art

./: README.md  extract.py  pyproject.toml
restore_pixel_art/: __init__.py  cli.py  core.py
restore_pixel_art_rs/: Cargo.toml
restore_pixel_art_rs/src/: main.rs
